--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,7 +9,8 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "fastapi[standard] (>=0.115.6,<0.116.0)",
-    "python-multipart (>=0.0.20,<0.0.21)"
+    "python-multipart (>=0.0.20,<0.0.21)",
+    "sqlmodel (>=0.0.22,<0.0.23)"
 ]
 
 
