Add login endpoint

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -2,6 +2,7 @@
 name = "backend"
 version = "0.1.0"
 description = ""
+package-mode = false
 authors = [
     {name = "Emmanuel Guefif",email = "eguefif@fastmail.com"}
 ]
