--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -11,7 +11,9 @@ requires-python = ">=3.12"
 dependencies = [
     "fastapi[standard] (>=0.115.6,<0.116.0)",
     "python-multipart (>=0.0.20,<0.0.21)",
-    "sqlmodel (>=0.0.22,<0.0.23)"
+    "sqlmodel (>=0.0.22,<0.0.23)",
+    "pyjwt[crypto] (>=2.10.1,<3.0.0)",
+    "passlib[bcrypt] (>=1.7.4,<2.0.0)"
 ]
 
 
