--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
     "python-multipart (>=0.0.20,<0.0.21)",
     "sqlmodel (>=0.0.22,<0.0.23)",
     "pyjwt[crypto] (>=2.10.1,<3.0.0)",
-    "passlib[bcrypt] (>=1.7.4,<2.0.0)"
+    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
+    "pydantic-settings (>=2.7.1,<3.0.0)"
 ]
 
 
